--- a/java-lotto-7/docs/구현_기능_목록.md
+++ b/java-lotto-7/docs/구현_기능_목록.md
@@ -1,6 +1,6 @@
 # 구현 기능 목록
 
-## 1. 사용자로부터 로또 구입 금액을 입력받는 기능.
+## 1. 사용자로부터 로또 구입 금액을 입력받는 기능.(미완료)
 
 - `int` 를 반환해야 한다.
 - `구입금액을 입력해 주세요.` 를 출력한다.
@@ -8,33 +8,33 @@
 - 다음과 같은 경우 예외를 발생시키고, 다시 입력받는다.
     - 정수를 입력하지 않은 경우.
 
-## 2. 로또를 구매하는 기능.
+## 2. 로또를 구매하는 기능.(미완료)
 
 - 1 에서 입력받은 금액을 통해 로또를 구입한다.
 - 구매 금액이 다음과 같다면 예외를 발생시키고, 1부터 다시 시작한다.
     - 구매 금액이 1,000 보다 작은 경우.
     - 구매 금액이 1,000 으로 나누어떨어지지 않는 경우.
 
-## 3. 로또 구입 내역을 출력하는 기능.
+## 3. 로또 구입 내역을 출력하는 기능.(미완료)
 
 - 구입한 로또를 출력한다.
 - `[8, 21, 23, 41, 42, 43]` 형식으로 출력하며, 오름차순으로 정렬해 출력해야 한다.
 
-## 4. 당첨 번호를 입력받는 기능.
+## 4. 당첨 번호를 입력받는 기능.(미완료)
 
 - `List<Integer>` 를 반환해야 한다.
 - `당첨 번호를 입력해 주세요.' 를 출력한다.
 - 다음과 같은 경우 예외를 발생시키고 다시 입력받는다.
     - 쉼표를 기준으로 나누었을 때 숫자가 아닌 문자를 입력한 경우. 예: `a,2`
 
-## 5. 보너스 번호(정수)를 입력받는 기능.
+## 5. 보너스 번호(정수)를 입력받는 기능.(미완료)
 
 - `int` 를 반환해야 한다.
 - `보너스 번호를 입력해 주세요.`를 출력한다.
 - 다음과 같은 경우 예외를 발생시키고, 다시 입력받는다.
     - 정수를 입력하지 않은 경우.
 
-## 6. 당첨 로또를 생성하는 기능.
+## 6. 당첨 로또를 생성하는 기능.(미완료)
 
 - 4, 5 에서 입력받은 값을 통해 당첨 로또를 생성한다.
 - 다음과 같은 경우 예외를 발생시키고, 4부터 다시 시작한다.
@@ -43,7 +43,7 @@
     - 당첨 번호 중 중복이 있는 경우.
     - 보너스 번호가 당첨 번호에 포함된 경우.
 
-## 7. 당첨 로또와 구입 로또들을 비교해 당첨 통계를 계산하는 기능.
+## 7. 당첨 로또와 구입 로또들을 비교해 당첨 통계를 계산하는 기능.(미완료)
 
 - 당첨 로또와 구입 로또들을 비교해 당첨 통계를 계산한다.
 - 당첨은 1등부터 5등까지 있다. 당첨 기준과 금액은 아래와 같다.
@@ -53,7 +53,7 @@
     - 4등: 4개 번호 일치 / 50,000원
     - 5등: 3개 번호 일치 / 5,000원
 
-## 8. 당첨 통계를 출력하는 기능.
+## 8. 당첨 통계를 출력하는 기능.(미완료)
 
 - 당첨 통계를 출력한다.
 
@@ -73,12 +73,12 @@
   6개 일치 (2,000,000,000원) - 0개
   ```
 
-## 9. 로또 구입 금액과 총 당첨 금액을 통해 수익률을 계산하는 기능.
+## 9. 로또 구입 금액과 총 당첨 금액을 통해 수익률을 계산하는 기능.(미완료)
 
 - 로또 구입 금액과 총 당첨 금액을 통해 수익률을 계산한다.
 - 수익률은 소수점 둘째 자리에서 반올림한다. (ex. 100.0%, 51.5%, 1,000,000.0%).
 
-## 10. 수익률을 출력하는 기능.
+## 10. 수익률을 출력하는 기능.(미완료)
 
 - 수익률을 출력한다.
 - 다음과 같이 출력한다.
